--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -65,7 +65,7 @@
         <div class="card mb-3">
             <div class="card-body">
             <div class="d-flex justify-content-between align-items-center">
-                <h5 class="card-title mb-0">Solicitud #{{ solicitud_pendiente.id }}</h5>
+                <h5 class="card-title mb-0">Solicitud Constancia de guardería</h5>
                 <span class="badge bg-warning text-dark">Pendiente</span>
             </div>
 
