--- a/templates/forms_requests/admin/request_form_admin.html
+++ b/templates/forms_requests/admin/request_form_admin.html
@@ -25,10 +25,10 @@
   <div class="col-md-2">
     <button id="btn-limpiar" class="btn btn-outline-secondary w-100" type="button">Limpiar</button>
   </div>
+  <div class="col-md-2">
+    <button id="btn-carta" class="btn btn-primary w-100" type="button">Carta de recomendación</button>
+  </div>
 </div>
-
-<small id="contador" class="text-muted d-block mb-2"></small>
-
 <table class="table table-sm table-striped table-hover align-middle">
   <thead class="table-light">
     <tr>
