--- a/templates/forms_requests/user/request_form_user.html
+++ b/templates/forms_requests/user/request_form_user.html
@@ -32,7 +32,7 @@
                     <p style="font-size: 0.7rem;">En caso de requerir sello pasar a capital humano</p>
                 </div>
                 <div class="form-actions">
-                    <a href="{% url 'constancia_laboral' %}" target="_blank" class="btn btn-outline-primary">Solicitar</a>
+                    <a href="{% url 'constancia_laboral' %}" target="_blank" class="btn btn-outline-primary">Visualizar</a>
                 </div>
             </div>
 
@@ -42,7 +42,7 @@
                     <p style="font-size: 0.7rem;">En caso de requerir sello pasar a capital humano</p>
                 </div>
                 <div class="form-actions">
-                    <a href="{% url 'constancia_especial' %}" target="_blank" class="btn btn-outline-primary">Solicitar</a>
+                    <a href="{% url 'constancia_especial' %}" target="_blank" class="btn btn-outline-primary">Visualizar</a>
                 </div>
             </div>
             <div class="form-item mb-3">
