ya salen notificaciones

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -4,6 +4,7 @@
 <html lang="es">
 
 <head>
+<link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 <style>
   /* Botón flotante */
   #mi-boton-widget {
@@ -153,7 +154,6 @@
 		}
 	}
 </script>
-
 </body>
 
 </html>
