ahora ya se quita si lo rechazaste

--- a/templates/forms_requests/admin/request_form_admin.html
+++ b/templates/forms_requests/admin/request_form_admin.html
@@ -66,16 +66,18 @@
           {% endwith %}
         </td>
         <td>
-          {% if s.pdf_respuesta and s.pdf_respuesta.name %}
-            <a href="{{ s.pdf_respuesta.url }}" target="_blank" rel="noopener">Ver PDF</a>
-          {% else %}
-            <button type="button"
-                    class="btn btn-sm btn-success btn-responder"
-                    data-id="{{ s.id }}"
-                    data-user="{{ s.empleado.get_full_name|default:s.empleado.username|escape }}">
-              Responder
-            </button>
-          {% endif %}
+        {% if s.estado == "rechazada" %}
+          -
+        {% elif s.pdf_respuesta and s.pdf_respuesta.name %}
+          <a href="{{ s.pdf_respuesta.url }}" target="_blank" rel="noopener">Ver PDF</a>
+        {% else %}
+          <button type="button"
+                  class="btn btn-sm btn-success btn-responder"
+                  data-id="{{ s.id }}"
+                  data-user="{{ s.empleado.get_full_name|default:s.empleado.username|escape }}">
+            Responder
+          </button>
+        {% endif %}
         </td>
         <td>
           <button type="button"
