--- a/templates/vacations/user/vacation_form_user.html
+++ b/templates/vacations/user/vacation_form_user.html
@@ -56,7 +56,7 @@
       <div class="card p-3 text-center">
         <p class="mb-1">Vacaciones</p>
         <h2>{{ vacation_balance }} Días</h2>
-        <small class="text-muted">Tiempo disponible (ultima actualizacion 30/06/2025)</small>
+        <small class="text-muted">Tiempo disponible</small>
       </div>
     </div>
   </div>
