--- a/templates/staff_requisitions/admin/admin_staff_requisitions.html
+++ b/templates/staff_requisitions/admin/admin_staff_requisitions.html
@@ -1,1 +1,8 @@
-<h1>dfasdas</h1>
+{% extends 'layouts/base.html' %}
+{% block page_title %}Panel de Aceptación de Requisiciones de Personal{% endblock %}
+{% block title %}Panel de Aceptación de Requisiciones de Personal{% endblock %}
+
+{% block content %}
+Aqui va a ir la aceptacion de requisicion de personal
+
+{% endblock %}
